spacing-fix

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,8 @@
-.spacer {
+  .spacer {
     flex: 1;
   }
-    .content {
-      max-block-size: 1024px!important;
+  .content {
+    max-block-size: 1024px!important;
     display: flex;
     background-color: #fff;
   }
@@ -69,6 +69,7 @@
     min-width: 750.1px!important;
   }
   .right-box h1 {
+    margin:0!important;
     font-size: 48px;
     font-weight: 900!important;
     font-family: graphik-black!important;
@@ -81,6 +82,7 @@
   }
   
   .button-app-store {
+    margin-top: 64px;
     display: inline-block;
     border-radius: 4px;
     border: 0;
@@ -91,6 +93,7 @@
   }
   
   .button-play-store {
+    margin-top: 64px;
     display: inline-block;
     margin-left:13px!important;
     border-radius: 4px;
@@ -115,12 +118,12 @@
     z-index: 1198!important;
   }
   .products-image img{
-    padding-top: 150px;
+    padding-top: 100px;
     padding-left: 230px;
     height: 1350px!important;
     width: auto!important;
     z-index: 1199!important;
   }
   .carousel-box {
-    padding-top:121px!important;
+    padding-top:101px!important;
   }
