--- a/src/app/carousel/carousel.component.css
+++ b/src/app/carousel/carousel.component.css
@@ -3,7 +3,7 @@
     display: inline-flex;
     width: 100%;
     height: 100%;
-    padding: 10px!important;
+    padding: 0 10px!important;
 }
 #trainer-box #right-button-box {
     display: block;
@@ -53,4 +53,6 @@
 #trainer-header {
     font-family: graphik-reg!important;
     font-size: 14px!important;
+    font-weight: normal;
+    padding-bottom: 5px;
 }
